[package]
name = "cwcat-bin"
description = "A CLI program that can concatenate videos from the game Content Warning"
authors = ["strangejune <june@strangejune.xyz>"]
license = "MIT"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = ["pretty-time"]
pretty-time = ["dep:chrono"]

[dependencies]
cwcat = { git = "https://github.com/junetried/cwcat.git" }
clap = "4.5.4"
chrono = { version = "0.4.38", optional = true, default_features = false, features = ["alloc", "std"] }
